<resources>
    <string name="app_name">Linux Distros List</string>
    <string name="details_activity">Details</string>
    <string name="about_activity">About</string>
    <string name="linux_distros_icon">Linux Distros Icon</string>
    <string name="linux_distros_name">Linux Distros Name</string>
    <string name="linux_distros_description">Linux Distros Description</string>
    <string name="pros">Pros</string>
    <string name="cons">Cons</string>
    <string name="software_package_management">Software\nPackage\nManagement</string>
    <string name="available_editions">Available\nEditions</string>
    <string name="possible_alternatives">Possible\nAlternatives</string>
    <string name="table_row_value">table_row_value</string>
    <string-array name="data_name">
        <item>Linux Mint</item>
        <item>Ubuntu</item>
        <item>MX Linux</item>
        <item>Arch Linux</item>
        <item>Gentoo</item>
        <item>Slackware Linux</item>
        <item>Debian</item>
        <item>Fedora</item>
        <item>openSUSE</item>
        <item>CentOS</item>
        <item>FreeBSD</item>
    </string-array>
    <string name="about_image">about image</string>
    <string name="about_name">Muhammad Fachrizal</string>
    <string name="about_mail">mfachrizal17@gmail.com</string>
    <string name="about_source">linux distros article taken from:&lt;br/><![CDATA[<a href=\"https://distrowatch.com/dwres.php?resource=major\">distrowatch.com</a>]]></string>
</resources>