<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextDetailsTitle"
            android:text="@string/linux_distros_name"/>

        <uk.co.deanwild.flowtextview.FlowTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            
            <ImageView
                android:id="@+id/img_icon"
                style="@style/ImageDetailsIcon"
                android:contentDescription="@string/linux_distros_icon" />

        </uk.co.deanwild.flowtextview.FlowTextView>

        <TableLayout
            style="@style/TableLayout">
            <TableRow
                style="@style/TableRow">
                <TextView
                    style="@style/TextTableRow.Field"
                    android:text="@string/pros" />
                <TextView
                    android:id="@+id/tv_pros"
                    style="@style/TextTableRow.Value"
                    android:text="@string/table_row_value" />
            </TableRow>
            <TableRow
                style="@style/TableRow">
                <TextView
                    style="@style/TextTableRow.Field"
                    android:text="@string/cons" />
                <TextView
                    android:id="@+id/tv_cons"
                    style="@style/TextTableRow.Value"
                    android:text="@string/table_row_value" />
            </TableRow>
            <TableRow
                style="@style/TableRow">
                <TextView
                    style="@style/TextTableRow.Field"
                    android:text="@string/software_package_management" />
                <TextView
                    android:id="@+id/tv_software_package_management"
                    style="@style/TextTableRow.Value"
                    android:text="@string/table_row_value" />
            </TableRow>
            <TableRow
                style="@style/TableRow">
                <TextView
                    style="@style/TextTableRow.Field"
                    android:text="@string/available_editions" />
                <TextView
                    android:id="@+id/tv_available_editions"
                    style="@style/TextTableRow.Value"
                    android:text="@string/table_row_value" />
            </TableRow>
            <TableRow
                style="@style/TableRow">
                <TextView
                    style="@style/TextTableRow.Field"
                    android:text="@string/possible_alternatives" />
                <TextView
                    android:id="@+id/tv_possible_alternatives"
                    style="@style/TextTableRow.Value"
                    android:minLines="4"
                    android:text="@string/table_row_value"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>